test/arrays/ferguson/loc-arr-slice.good
loc-arr-slice.chpl:1: In function 'badReturnRefLocal':
loc-arr-slice.chpl:3: error: illegal expression to return by ref
loc-arr-slice.chpl:6: In function 'badReturnRefConstant':
loc-arr-slice.chpl:7: error: function cannot return constant by ref
loc-arr-slice.chpl:19: In function 'badReturnAliasLocal':
loc-arr-slice.chpl:21: error: illegal return of array aliasing a local array
loc-arr-slice.chpl:31: In function 'badReturnAliasAliasLocal':
loc-arr-slice.chpl:33: error: illegal return of array aliasing a local array
loc-arr-slice.chpl:15: In function 'badReturnSliceByRef':
loc-arr-slice.chpl:16: error: illegal expression to return by ref
